// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`escaped.js 1`] = `
'\\'';
'\\"';
"\\'";
"\\"";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
'\\'';
'\\"';
"\\'";
"\\"";

`;

exports[`last-line-0.js 1`] = `
'use strict';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"use strict";

`;

exports[`last-line-1.js 1`] = `
'use strict';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"use strict";

`;

exports[`last-line-2.js 1`] = `
'use strict';

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"use strict";

`;

exports[`newline.js 1`] = `
/* @flow */

"use strict";

import a from "a";

a();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

"use strict";

import a from "a";

a();

`;

exports[`no-newline.js 1`] = `
"use strict";
a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"use strict";
a;

`;

exports[`test.js 1`] = `
"use strict";

function fn() {
  "use strict";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
"use strict";

function fn() {
  "use strict";
}

`;
